# mail2S3

./: LICENSE  README.md  config.toml  main.py  pyproject.toml
