[tool.poetry]
name = "mail2s3"
version = "0.1.0"
description = "Used to back up imap accounts (individual emails) to S3 API compatible storage. Includes Encryption & restore functionality."
authors = ["sahelea1"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cryptography = "^43.0.0"
boto3 = "^1.34.149"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
